✨ 实现文件树 (#39)
* ✨ 实现文件树
仿照 https://github.com/PaperMC/docs/blob/5fef1d92b5d7a4744800cfdda2a13ce596451022/src/components/config/ConfigurationStructureDiagram.tsx

* ✨ 完善代码

* ✨ 完善代码

* 🎨 代码格式化

* ✨ 可展开描述 & 使用 twcss 简化

* ✨ 缩小节点图标大小

* 修复差异

---------

Co-authored-by: Dreeam <61569423+Dreeam-qwq@users.noreply.github.com>

--- a/src/css/base/theme.css
+++ b/src/css/base/theme.css
@@ -511,6 +511,16 @@ button[class*="colorModeToggle"]:active::after {
     }
 }
 
+[data-theme="dark"] {
+    --config-node-highlight-text-color: white;
+    --config-node-popup-background-color: #1c1e21;
+}
+
+[data-theme="light"] {
+    --config-node-highlight-text-color: black;
+    --config-node-popup-background-color: white;
+}
+
 /* 尊重用户减少动画偏好 */
 @media (prefers-reduced-motion: reduce) {
     *,
